force-app/main/default/objects/Case/fields/Auto_Routed_To__c.field-meta.xml
<CustomField>
    <fullName>Auto_Routed_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auto Routed To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>