force-app/main/default/objects/Case/fields/Create_Activity__c.field-meta.xml
<CustomField>
    <fullName>Create_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Activity</label>
    <type>Checkbox</type>
</CustomField>