force-app/main/default/objects/Case/fields/External_Provider_Selected__c.field-meta.xml
<CustomField>
    <fullName>External_Provider_Selected__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific provider chosen for this case after the search is complete.</description>
    <label>External Provider Selected</label>
    <referenceTo>Case_Provider__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>