force-app/main/default/objects/Case/fields/SLA_Target__c.field-meta.xml
<CustomField>
    <fullName>SLA_Target__c</fullName>
    <label>SLA Target</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>