force-app/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Triage_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Prescription</fullName>
            </value>
            <value>
                <fullName>Specialist Referral</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Emergency Shelter</fullName>
            </value>
            <value>
                <fullName>Rent Assistance</fullName>
            </value>
            <value>
                <fullName>Permanent Housing</fullName>
            </value>
            <value>
                <fullName>Repairs</fullName>
            </value>
            <value>
                <fullName>Food Bank</fullName>
            </value>
            <value>
                <fullName>Meal Delivery</fullName>
            </value>
            <value>
                <fullName>Nutrition Counseling</fullName>
            </value>
            <value>
                <fullName>SNAP Benefits</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>