force-app/main/default/objects/Case/recordTypes/Housing.recordType-meta.xml
<RecordType>
    <fullName>Housing</fullName>
    <active>true</active>
    <businessProcess>Case Support</businessProcess>
    <description>Housing related cases</description>
    <label>Housing</label>
</RecordType>