force-app/main/default/objects/Case/recordTypes/Medical.recordType-meta.xml
<RecordType>
    <fullName>Medical</fullName>
    <active>true</active>
    <businessProcess>Case Support</businessProcess>
    <description>Medical related cases</description>
    <label>Medical</label>
</RecordType>