force-app/main/default/objects/Case/recordTypes/Nutrition.recordType-meta.xml
<RecordType>
    <fullName>Nutrition</fullName>
    <active>true</active>
    <businessProcess>Case Support</businessProcess>
    <description>Nutrition related cases</description>
    <label>Nutrition</label>
</RecordType>