force-app/main/default/objects/Case/validationRules/Supervisor_Closing.validationRule-meta.xml
<ValidationRule>
    <fullName>Supervisor_Closing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Closed&quot;),
    NOT($Permission.Case_Supervisor)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Only Supervisor can close cases</errorMessage>
</ValidationRule>