force-app/main/default/objects/Case/listViews/General_Cases_Case.listView-meta.xml
<ListView>
    <fullName>General_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>General Cases</label>
    <queue>General_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>