force-app/main/default/objects/Case/listViews/Housing_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Housing_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Housing Cases</label>
    <queue>Housing_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>