force-app/main/default/objects/Case/listViews/Medical_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Medical_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Medical Cases</label>
    <queue>Medical_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>