force-app/main/default/objects/Case/listViews/Nutrition_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Nutrition_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Nutrition Cases</label>
    <queue>Nutrition_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>