force-app/main/default/objects/Case/listViews/Supervisor_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Supervisor_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Supervisor Queue</label>
    <queue>Supervisor_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>